Included Pat and Necmettin's thesis edits

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -10,7 +10,7 @@ However, this localization is less precise than it could be, due to several flaw
 
 %Possible Extensions
 
-It is hoped that this project is will be a jumping off point for future work. The logical next step would be to integrate the ultrasonic sensor's range and angle data into the project, as a slower approximation of LIDAR range data, which will allow the system to dynamically generate a map of the immediate area around the rover. Localization can then be performed in real-time with respect to this map.
+It is hoped that this project will be a jumping off point for future work. The logical next step would be to integrate the ultrasonic sensor's range and angle data into the project, as a slower approximation of LIDAR range data, which will allow the system to dynamically generate a map of the immediate area around the rover. Localization can then be performed in real-time with respect to this map.
 
 %The most popular algorithm for global localization (i.e., localization including range data) is the adaptive Monte Carlo localization (amcl) system.
 
