--- a/FieldTest.tex
+++ b/FieldTest.tex
@@ -21,7 +21,7 @@ Figure \ref{figRouteOdomImuTwoYaw} shows the path generated when both wheel odom
 
 % were impacted negatively during the field test by external magnetic fields other than the earth's. The field test itself was carried out in a parking lot filled with cars, some of which were running. Large metal bodies with flowing current cause large magnetic fields. 
 
-Figure \ref{figRouteOdomImuGpsTwoYaw} shows the result of fusing both prior sensors with GPS fixes. This plot looks much like the raw gps plot in Figure \ref{figRouteGPS}, however upon closer inspection we can see jagged jumps in position. These jumps are instantaneous and actually lead to a discontinuous position estimate, though the visualizing tool connects every point. They are caused by the filter instantaneously adjusting the position estimate based on incoming gps fixes. The filter gives some weight to the current estimate, so the new adjusted position lies in between the position reported by the gps fix and the current estimate. Due to the frequent gps fixes and slow velocity of the rover, the estimated path never varies too far from the raw gps path. Figure \ref{figRouteOdomImuGpsOneYaw} again tries to improve the estimate by ignoring the yaw tracking of the wheel odometry. The output is fairly similar, but smoother.
+Figure \ref{figRouteOdomImuGpsTwoYaw} shows the result of fusing both prior sensors with GPS fixes. This plot looks much like the raw gps plot in Figure \ref{figRouteGPS}, however upon closer inspection we can see jagged jumps in position. These jumps are instantaneous and actually lead to a discontinuous position estimate, though the visualizing tool connects every point. They are caused by the filter instantaneously adjusting the position estimate based on incoming gps fixes. The filter gives some weight to the current estimate, so the new adjusted position lies in between the position reported by the gps fix and the current estimate. Due to the frequent gps fixes and slow velocity of the rover, the estimated path never varies too far from the raw gps path. Figure \ref{figRouteOdomImuGpsOneYaw} again tries to improve the estimate by ignoring the yaw tracking of the wheel odometry. The output is fairly similar, but has smaller discontinuous jumps.
 
 \begin{table}[h]
 	\caption {Errors for Different Sensor Fusions \cite{robot_localization_paper}} \label{tab:errors} 
