--- a/ROS.tex
+++ b/ROS.tex
@@ -63,12 +63,12 @@ Every time the sketch wishes to update the laptop with its newest sensor reading
 
 When the sketch is waiting between updates, it continually listens to the serial port for motor commands. These commands are Int8 messages on the "/cmd/left" or "/cmd/right" topics, which the sketch subscribes to. When these messages are found in the serial input buffer, a short callback function is executed, which writes the R/C pulse command to the proper motor channel.
 
-Arduino boards use different types of memory. Flash memory is used to store compiled code, and static random access memory (SRAM) is used to store dynamic variables at runtime. The Uno has 32kB of flash memory, but only 2kB of SRAM. The rosserial Arduino library is large, and takes up quite a lot of SRAM space. Its input and output serial buffers alone use 1024 bytes in total. This makes running out of space for local variables quite easy, which can lead to instability and crashes when running the sketch. To save space, a modified version of rosserial\_arduino has been used, which supports storing constant strings in flash memory rather than SRAM. Since topic names and error messages use long descriptive strings, this saves several hundred kB of space in SRAM and ensures the sketch's stability.
+Arduino boards use different types of memory. Flash memory is used to store compiled code, and static random access memory (SRAM) is used to store dynamic variables at runtime. The Uno has 32kB of flash memory, but only 2kB of SRAM. The rosserial\_arduino library is large, and takes up quite a lot of SRAM space. Its input and output serial buffers alone use 1024 bytes in total. This makes running out of space for local variables quite easy, which can lead to instability and crashes when running the sketch. To save space, a modified version of rosserial\_arduino has been used, which supports storing constant strings in flash memory rather than SRAM. Since topic names and error messages use long descriptive strings, this saves several hundred kB of space in SRAM and ensures the sketch's stability.
 %https://github.com/strothmw/rosserial
 
-The rosserial Arduino library abstracts away most of the serial communication protocol, but does allow the baud rate to be specified. In this use case, baud rate is equivalent to bits per second. The more bits per second sent over serial, the more frequently the microcontroller needs to sample the incoming and outgoing line. So the baud rate cannot be set arbitrarily high, as the Uno has a limited clock speed. If it is set too low, however, then the stream of sensor data being published would overwhelm the connection. Significantly less data will be streaming in than transmitted out, so the amount of outgoing data is the deciding factor. Thus to calculate an appropriate baud rate, the amount of sensor data transmitted per second must be known.
+The library abstracts away most of the serial communication protocol, but does allow the baud rate to be specified. In this use case, baud rate is equivalent to bits per second. The more bits per second sent over serial, the more frequently the microcontroller needs to sample the incoming and outgoing line. So the baud rate cannot be set arbitrarily high, as the Uno has a limited clock speed. If it is set too low, however, then the stream of sensor data being published would overwhelm the connection. Significantly less data will be streaming in than transmitted out, so the amount of outgoing data is the deciding factor. Thus to calculate an appropriate baud rate, the amount of sensor data transmitted per second must be known.
 
-rosserial uses a serial protocol with 8 bytes of overhead for every message. Each sensor update publishes three messages: an eight-byte EncCount message, a one-byte Int8 message, and a two-byte UInt16 message. This means that each update pushes 11 bytes of data in three messages, with 24 bytes of overhead. Thus a total of 35 bytes are sent over serial.
+Communication between board and laptop involves a serial protocol with 8 bytes of overhead for every message. Each sensor update publishes three messages: an eight-byte EncCount message, a one-byte Int8 message, and a two-byte UInt16 message. This means that each update pushes 11 bytes of data in three messages, with 24 bytes of overhead. Thus a total of 35 bytes are sent over serial.
 
 Since the PING))) sensor requires a minimum delay of 30 ms between pings, the sketch cannot publish its sensor values at a rate higher than 33 Hz. Therefore the sketch will not push more than:
 \[33\ Hz * 35\ Bytes = 1155\ Bytes\ per\ second\ (Bps)\]
@@ -84,7 +84,7 @@ rosserial\_python is one host package of rosserial, which acts as a bridge betwe
 \section{differential\_drive}
 The differential\_drive package was created by Jon Stephan to create a simple interface for controlling a differential wheeled robot \cite{differentialDrivePackage}. Such a robot uses a two-wheeled system where both wheels are on a common axis, but each wheel is driven independently. Turning is achieved by lowering the velocity of one wheel compared to the other.
 
-Because the rover has four wheels, turning necessarily involves slippage of one or more wheels. This is known as a skid-steering system, due to the skidding of the wheels. When wheels slip, they move without rotating. The motor encoders cannot see this movement, and so this causes error in the wheel odometry estimate. This error makes it difficult to properly localize the rover, especially with respect to the rover's heading. Despite this flaw, this package was used to model the rover as a differentially steered robot for the purposes of dead reckoning, due to the lack of ROS support for skid-steering vehicles.
+Because the rover has four wheels, turning necessarily involves slippage of one or more wheels. This is known as a skid-steering system, due to the skidding of the wheels. When wheels slip, they move without rotating. The motor encoders cannot see this movement, and so this causes error in the wheel odometry estimate, especially in the rover's heading. Despite this flaw, the differential\_drive package was used to model the rover as a differentially steered robot for the purposes of dead reckoning, due to the lack of a better option within ROS.
 
 \subsection{diff\_odom} \label{sectionOdomPublishing}
 
