--- a/introduction.tex
+++ b/introduction.tex
@@ -18,7 +18,7 @@ However, in this project's current implementation a static map was assumed to ex
 %The ultimate goal of this project is to create a mobile robot capable of navigating the New College of Florida campus during the day, with limited financial resources. While that end goal has not yet been reached, appreciable progress in designing and constructing the rover and its associated control software has been made. Localization with respect to a static map was implemented, and integration of existing range data into dynamic map generation is the next logical step. It is the author's hope that further work with this hardware will be completed at New College of Florida.
 
 % design and its importance (broader access to field)
-The rover's design is carefully laid out through this thesis in the hope that others interested in experimenting with autonomous navigation will be able to replicate the construction. The cheap material cost may help ease the financial burden for those who desire hands-on experience in this field. The design consists of a four-wheeled skid-steering aluminum rover base, an Arduino microcontroller, and motor driver. It is controlled by a laptop connected via USB. Sensors available include two motor rotary encoders, a mobile smartphone, and an ultrasonic distance sensor. The Arduino acts as a low-level robotic controller, sending wheel encoder and range data to the laptop, and accepting motor velocity commands. An Android app publishes Intertial Measurement Unit (IMU) and GPS data from the mobile phone, and the laptop fuses these readings with the wheel encoder data to form an estimate of pose and velocity using an extended Kalman filter.
+The rover's design is carefully laid out through this thesis in the hope that others interested in experimenting with autonomous navigation will be able to replicate the construction. The cheap material cost may help ease the financial burden for those who desire hands-on experience in this field. The design consists of a four-wheeled skid-steering aluminum rover base, an Arduino microcontroller, and a motor driver. It is controlled by a laptop connected via USB. Sensors available include two motor rotary encoders, a mobile smartphone, and an ultrasonic distance sensor. The Arduino acts as a low-level robotic controller, sending wheel encoder and range data to the laptop, and accepting motor velocity commands. An Android app publishes Intertial Measurement Unit (IMU) and GPS data from the mobile phone, and the laptop fuses these readings with the wheel encoder data to form an estimate of pose and velocity using an extended Kalman filter.
 
 % Choice of Sensors
 The sensors available are limited in precision, but were chosen for their cheap cost and wide availability. Rather than purchasing separate IMU and GPS chips to interface with the Arduino microcontroller, we used the built-in sensors on a smartphone. These built-in sensors are less accurate than their external counterparts, but often present no additional cost to acquire for a college student.
